change grid logic and and fix horizontal scrolling

--- a/dev/res/sass/my_components/_main.scss
+++ b/dev/res/sass/my_components/_main.scss
@@ -66,7 +66,6 @@ body {
 .control-panel__right-section {
   z-index: 100;
   display: flex;
-  margin-right: 80px;
   @include tx-media(phone) {
     display: flex;
     flex-direction: column;
@@ -93,11 +92,9 @@ body {
   align-items: center;
   flex-direction: column;
   overflow: hidden;
-  width: 250px;
+  width: 100%;
   padding: 20px 20px 10px;
   border-radius: 6px;
-  margin-right: 20px;
-  margin-bottom: 20px;
   background-color: $white;
 }
 
@@ -172,20 +169,15 @@ body {
 }
 
 .item-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 40px;
-  @include tx-media(phone) {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin-bottom: 30px;
+  @include tx-media(tablet) {
+    grid-template-columns: repeat(3, 1fr);
   }
-
-  @media (min-width: 1000px) and (max-width: 1400px) {
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  @include tx-media(phone) {
+    grid-template-columns: 1fr;
   }
 }
 
